--- a/timesheetapp/src/App.css
+++ b/timesheetapp/src/App.css
@@ -105,14 +105,14 @@
 }
 
 /* Select Styling */
-.input-field[role="select"] {
+/* .input-field[role="select"] {
   appearance: none;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='%23fff' viewBox='0 0 16 16'%3E%3Cpath d='M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z'/%3E%3C/svg%3E");
+  background-image: url('/path/to/dropdown-arrow.svg');
   background-repeat: no-repeat;
   background-position: right 0.75rem center;
   padding-right: 2rem;
   cursor: pointer;
-}
+} */
 
 .input-field option {
   background-color: #2c2c2c;
